build/log/idf_py_stderr_output_61585
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void uart_init()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:27:9: error: 'uart_config_t' does not name a type
   27 |   const uart_config_t uart_config = {
      |         ^~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:19:18: error: 'UART_NUM_1' was not declared in this scope; did you mean 'UART_NUM'?
   19 | #define UART_NUM UART_NUM_1
      |                  ^~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:35:23: note: in expansion of macro 'UART_NUM'
   35 |   uart_driver_install(UART_NUM, RX_BUF_SIZE * 2, 0, 0, NULL, 0);
      |                       ^~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:35:3: error: 'uart_driver_install' was not declared in this scope
   35 |   uart_driver_install(UART_NUM, RX_BUF_SIZE * 2, 0, 0, NULL, 0);
      |   ^~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:36:32: error: 'uart_config' was not declared in this scope; did you mean 'uart_init'?
   36 |   uart_param_config(UART_NUM, &uart_config);
      |                                ^~~~~~~~~~~
      |                                uart_init
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:36:3: error: 'uart_param_config' was not declared in this scope
   36 |   uart_param_config(UART_NUM, &uart_config);
      |   ^~~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:20:18: error: 'GPIO_NUM_4' was not declared in this scope
   20 | #define TXD_PIN (GPIO_NUM_4)
      |                  ^~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:37:26: note: in expansion of macro 'TXD_PIN'
   37 |   uart_set_pin(UART_NUM, TXD_PIN, RXD_PIN, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
      |                          ^~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:21:18: error: 'GPIO_NUM_5' was not declared in this scope
   21 | #define RXD_PIN (GPIO_NUM_5)
      |                  ^~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:37:35: note: in expansion of macro 'RXD_PIN'
   37 |   uart_set_pin(UART_NUM, TXD_PIN, RXD_PIN, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
      |                                   ^~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:37:44: error: 'UART_PIN_NO_CHANGE' was not declared in this scope
   37 |   uart_set_pin(UART_NUM, TXD_PIN, RXD_PIN, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
      |                                            ^~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:37:3: error: 'uart_set_pin' was not declared in this scope; did you mean 'uart_send_string'?
   37 |   uart_set_pin(UART_NUM, TXD_PIN, RXD_PIN, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
      |   ^~~~~~~~~~~~
      |   uart_send_string
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void uart_send_string(const char*)':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:42:19: error: 'strlen' was not declared in this scope
   42 |   const int len = strlen(str);
      |                   ^~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:5:1: note: 'strlen' is defined in header '<cstring>'; did you forget to '#include <cstring>'?
    4 | #include "esp_main.h"
  +++ |+#include <cstring>
    5 | 
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:19:18: error: 'UART_NUM_1' was not declared in this scope; did you mean 'UART_NUM'?
   19 | #define UART_NUM UART_NUM_1
      |                  ^~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:43:40: note: in expansion of macro 'UART_NUM'
   43 |   const int txBytes = uart_write_bytes(UART_NUM, str, len);
      |                                        ^~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:43:23: error: 'uart_write_bytes' was not declared in this scope
   43 |   const int txBytes = uart_write_bytes(UART_NUM, str, len);
      |                       ^~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:44:3: error: 'ESP_LOGI' was not declared in this scope
   44 |   ESP_LOGI("UART", "Wrote %d bytes", txBytes);
      |   ^~~~~~~~
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2437: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
